edits on keys to handle checklists in a better way with delete ability
